Correcting gramma err4 + chapter-10

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,6 +26,7 @@
 @import "components/popup-7-Banera";
 @import "components/popup-8-poezda";
 @import "components/popup-9-lifty";
+@import "components/popup-10-Paneli";
 
 
 @import "layout/footer";
