Correcting gramma err5 incl chapter-10

--- a/src/scss/components/popup-10-Paneli.scss
+++ b/src/scss/components/popup-10-Paneli.scss
@@ -3,9 +3,9 @@
 
 
   &__content {
-    min-width: 60%;
-    //min-height: 70%;
-    max-height: 90%;
+    min-width: 65%;
+    min-height: 95%;
+
     display: grid;
     grid-template-columns: 40% 57%;
     grid-template-rows: 5rem 1fr;
